// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

package com.example.action5;

option java_multiple_files = true;
option java_outer_classname = "YetAnotherActionApi";

import "kalix/annotations.proto";

message Request {}
message Response {}

service YetAnotherAction {
  option (kalix.codegen) = {
    action: { }
  };

  rpc Method(Request) returns (Response);
}
